# request-mcp

./: .gitignore  CLAUDE.md  README.md  SKILL.md  benchmark.py  install.sh  main.py  pyproject.toml  server.py
.github/workflows/: evals.yml  test.yml
context/: context.md
context/plans/: 2026-05-06-features-phase-1.md  2026-05-06-features-phase-2.md  2026-05-06-features-phase-3.md  2026-05-06-features-phase-4.md  2026-05-06-features.md
docs/index/: _root.md  benchmark.md  cli.md  evals.md  html.md  http.md  json_optimizer.md  resolve.md  savings.md  server.md  tests.md
evals/: EVAL_RESULTS.md  run_evals.py
evals/fixtures/json/: github_repos.json
fetch_mcp/: __init__.py  _resolve.py  cache.py  cli.py  html.py  http.py  json_optimizer.py  pdf.py  savings.py  server.py
scripts/: benchmark.py
tests/: conftest.py  test_auth.py  test_cache.py  test_cli.py  test_html.py  test_http.py  test_json_optimizer.py  test_pdf.py  test_pdf_tool.py  test_smart_fetch.py
