[project]
name = "request-mcp"
version = "0.1.0"
description = "The high-efficiency networking layer for LLMs. Reduce token consumption by 58%+ by cleaning web data before it hits your context window."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.12.0",
    "html-to-markdown>=2.30.0",
    "httpx>=0.28.1",
    "jsonpath-ng>=1.8.0",
    "mcp[cli]>=1.26.0",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "tiktoken>=0.12.0",
]
