[project]
name = "fetch-mcp"
version = "0.1.0"
description = "The high-efficiency networking layer for LLMs. Reduce token consumption by 58%+ by cleaning web data before it hits your context window."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.12.0",
    "html-to-markdown>=3.1.0",
    "httpx>=0.28.1",
    "jsonpath-ng>=1.8.0",
    "mcp[cli]>=1.26.0",
    "playwright>=1.58.0",
    "truststore>=0.10.4",
]

[project.scripts]
fetch-mcp = "fetch_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "tiktoken>=0.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
